Update title and add promo sections in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <!-- ✅ Basic SEO Setup -->
-<title>KARBA Financial Consultant Ltd | KARBA Insurance & Real Estate Nigeria</title>
+<title>KARBA Financial Consultant Ltd | KARBA Real Estate & Insurance In Nigeria</title>
 <meta name="description" content="KARBA Financial Consultant Ltd — trusted advisory for insurance and real estate in Nigeria. Search 'KARBA' for verified property listings, life insurance, and estate investments.">
 <meta name="keywords" content="KARBA, Karba Nigeria, Karba Financial Consultant, Karba Insurance, Karba Real Estate, Karba Properties, KARBA Lagos, KARBA investments, insurance broker Nigeria, real estate consultant">
 <link rel="canonical" href="https://karbafinancialconsultant.com/">  
@@ -376,134 +376,50 @@
     </div>
   </section>
 
-<!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
-<style>
-  .promo-section {
-    margin: 40px 10px;
-  }
-  .promo-container {
-    display: grid;
-    gap: 12px;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  }
-  .promo-box {
-    border: 1px solid var(--line);
-    background: rgba(255,255,255,.06);
-    border-radius: 12px;
-    padding: 14px;
-  }
-  .promo-box h3 {
-    margin: 0 0 8px;
-    font-size: 18px;
-    font-weight: 700;
-  }
-  .promo-box p {
-    font-size: 14px;
-    margin: 0 0 8px;
-    line-height: 1.5;
-  }
-
-  .btn-inline {
-    display: inline-block;
-    padding: 6px 10px;
-    border-radius: 8px;
-    border: 1px solid var(--gold);
-    color: var(--gold);
-    text-decoration: none;
-  }
-  .btn-inline:hover {
-    filter: brightness(1.08);
-  }
-
-  /* Modal pattern (same as your property modals) */
-  .modal-toggle { display: none; }
-  .photo-modal {
-    position: fixed; inset: 0;
-    background: rgba(0,0,0,.6);
-    display: none; align-items: center; justify-content: center;
-    z-index: 1000; padding: 16px;
-  }
-  .modal-toggle:checked + .photo-modal { display: flex; }
-  .photo-content {
-    background: #fff; color: #111;
-    max-width: 520px; width: 100%;
-    border-radius: 12px; padding: 16px;
-  }
-  .photo-content h3 { margin: 0 0 10px; }
-  .photo-content img { width: 100%; height: auto; border-radius: 8px; margin: 6px 0; }
-  .whatsapp-btn {
-    display: inline-block; margin-top: 10px; padding: 8px 12px;
-    border-radius: 8px; background: #25D366; color: #fff; text-decoration: none;
-  }
-  .close-modal { display: inline-block; margin-left: 10px; color: #555; cursor: pointer; }
-</style>
-
-<section class="promo-section" id="promos">
-  <h2 class="title">Promos & Special Announcements</h2>
-  <div class="promo-container">
-
-    <!-- PROMO 1 -->
-    <div class="promo-box">
-      <h3>🔥 HOT DISTRESS SALE: TEV 13 PLOTS FENCED with C of O (Eleko Lekki Expressway)</h3>
-      <p>Buy and win 7 days all-expense-paid trip to any country of your choice in Africa. <strong>Ends 18/12/2025</strong></p>
-      <label for="promo1" class="btn-inline">See Photos</label>
-
-      <input id="promo1" class="modal-toggle" type="checkbox">
-      <div class="photo-modal">
-        <div class="photo-content">
-          <h3>HOT DISTRESS SALE: TEV 13 PLOTS</h3>
-          <img src="assets/promo1-1.jpg" alt="Promo 1 photo 1">
-          <img src="assets/promo1-2.jpg" alt="Promo 1 photo 2">
-          <p>Secure one or more plots today and qualify for the travel draw. Offer valid till 18/12/2025.</p>
-          <a class="whatsapp-btn" target="_blank" rel="noopener"
-             href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20HOT%20DISTRESS%20SALE%20promo.">Message on WhatsApp</a>
-          <label for="promo1" class="close-modal">× Close</label>
-        </div>
-      </div>
-    </div>
-
-    <!-- PROMO 2 -->
-    <div class="promo-box">
-      <h3>🎁 Limited Offer: 5% Discount on FGC & KLFG Lands</h3>
-      <p>Secure your property this week and get 50 blocks & 5 bags of cement. Plus up to ₦2m savings! <strong>Ends 18/12/2025</strong></p>
-      <label for="promo2" class="btn-inline">See Photos</label>
-
-      <input id="promo2" class="modal-toggle" type="checkbox">
-      <div class="photo-modal">
-        <div class="photo-content">
-          <h3>5% Discount on FGC & KLFG Lands</h3>
-          <img src="assets/promo2-1.jpg" alt="Promo 2 photo 1">
-          <img src="assets/promo2-2.jpg" alt="Promo 2 photo 2">
-          <p>Enjoy discounted plots and construction bonuses on verified estates. Hurry before offer closes.</p>
-          <a class="whatsapp-btn" target="_blank" rel="noopener"
-             href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">Message on WhatsApp</a>
-          <label for="promo2" class="close-modal">× Close</label>
-        </div>
-      </div>
-    </div>
-
-    <!-- PROMO 3 -->
-    <div class="promo-box">
-      <h3>💰 Buy & Win Vouchers (FGC, KLFG & TEV Estates)</h3>
-      <p>Buy 1 plot and win ₦100k shopping voucher, 2 plots ₦250k, 3 plots ₦400k! <strong>Ends 18/12/2025</strong></p>
-      <label for="promo3" class="btn-inline">See Photos</label>
-
-      <input id="promo3" class="modal-toggle" type="checkbox">
-      <div class="photo-modal">
-        <div class="photo-content">
-          <h3>Buy & Win Vouchers</h3>
-          <img src="assets/promo3-1.jpg" alt="Promo 3 photo 1">
-          <img src="assets/promo3-2.jpg" alt="Promo 3 photo 2">
-          <p>Stand a chance to win exciting prizes when you buy verified plots in our partner estates.</p>
-          <a class="whatsapp-btn" target="_blank" rel="noopener"
-             href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Promo.">Message on WhatsApp</a>
-          <label for="promo3" class="close-modal">× Close</label>
-        </div>
-      </div>
-    </div>
-
+<!-- PROMO 1 -->
+<label for="promo1" class="btn primary">See Photos</label>
+<input id="promo1" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>HOT DISTRESS SALE: TEV 13 PLOTS (C of O)</h3>
+    <img src="assets/promo1-1.jpg" alt="Promo 1 photo 1">
+    <img src="assets/promo1-2.jpg" alt="Promo 1 photo 2">
+    <p>Buy and win 7 days all-expense-paid trip. Ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20TEV%2013%20Plots%20promo.">Message on WhatsApp</a>
+    <label for="promo1" class="close-modal">× Close</label>
   </div>
-</section>
+</div>
+
+<!-- PROMO 2 -->
+<label for="promo2" class="btn primary">See Photos</label>
+<input id="promo2" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>5% Discount on FGC & KLFG Lands</h3>
+    <img src="assets/promo2-1.jpg" alt="Promo 2 photo 1">
+    <img src="assets/promo2-2.jpg" alt="Promo 2 photo 2">
+    <p>Get 50 blocks + 5 bags of cement. Ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">Message on WhatsApp</a>
+    <label for="promo2" class="close-modal">× Close</label>
+  </div>
+</div>
+
+<!-- PROMO 3 -->
+<label for="promo3" class="btn primary">See Photos</label>
+<input id="promo3" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>Buy & Win Vouchers (FGC, KLFG, TEV)</h3>
+    <img src="assets/promo3-1.jpg" alt="Promo 3 photo 1">
+    <img src="assets/promo3-2.jpg" alt="Promo 3 photo 2">
+    <p>1 plot: ₦100k voucher, 2 plots: ₦250k, 3 plots: ₦400k. Ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Vouchers%20Promo.">Message on WhatsApp</a>
+    <label for="promo3" class="close-modal">× Close</label>
+  </div>
+</div>
 
 <!-- Put this near the very top of <body> so Back to Top works -->
 <a id="top"></a>
