--- a/index.html
+++ b/index.html
@@ -376,50 +376,112 @@
     </div>
   </section>
 
-<!-- PROMO 1 -->
-<label for="promo1" class="btn primary">See Photos</label>
+  <style>
+.modal-toggle { display: none; }
+.photo-modal {
+  position: fixed; inset: 0;
+  background: rgba(0,0,0,.6);
+  display: none; align-items: center; justify-content: center;
+  z-index: 1000; padding: 16px;
+}
+.modal-toggle:checked + .photo-modal { display: flex; }
+.photo-content {
+  background: #fff; color: #111;
+  max-width: 520px; width: 100%;
+  border-radius: 12px; padding: 16px;
+}
+.photo-content h3 { margin: 0 0 10px; }
+.photo-content img { width: 100%; height: auto; border-radius: 8px; margin: 6px 0; }
+.whatsapp-btn {
+  display: inline-block; margin-top: 10px; padding: 8px 12px;
+  border-radius: 8px; background: #25D366; color: #fff; text-decoration: none;
+}
+.close-modal {
+  display: inline-block; margin-left: 10px; color: #555; cursor: pointer;
+}
+</style>
+
+<!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
+<section class="section" id="promos">
+  <div class="container">
+    <hr style="border: 0; border-top: 1px solid #345; margin: 40px 0 25px 0;">
+    <h2>Promos & Special Announcements</h2>
+    <!-- ===== PROMO 1 ===== -->
+    <div class="promo-box">
+      <h3>🎉 HOT DISTRESS SALES: TEV 13 PLOTS FENCED with C of O (Eleko Lekki Expressway)</h3>
+      <p>
+        Buy and Win 7days all expenses paid trip to any Country of your choice in Africa. <strong>Ends 18/12/2025</strong>.
+      </p>
+      <label for="promo1" class="cta-link">See Photos</label>
+
+<!-- modal trigger -->
 <input id="promo1" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
-    <h3>HOT DISTRESS SALE: TEV 13 PLOTS (C of O)</h3>
+    <h3>🔥 HOT DISTRESS SALE: TEV 13 PLOTS FENCED with C of O (Eleko Lekki Expressway)</h3>
+
     <img src="assets/promo1-1.jpg" alt="Promo 1 photo 1">
     <img src="assets/promo1-2.jpg" alt="Promo 1 photo 2">
-    <p>Buy and win 7 days all-expense-paid trip. Ends 18/12/2025.</p>
+
+    <p>Buy and win a 7-day all-expense-paid trip to any country of your choice in Africa. Offer ends 18/12/2025.</p>
+
     <a class="whatsapp-btn" target="_blank" rel="noopener"
-       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20TEV%2013%20Plots%20promo.">Message on WhatsApp</a>
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20TEV%2013%20Plots%20Promo.">
+       Message on WhatsApp
+    </a>
     <label for="promo1" class="close-modal">× Close</label>
   </div>
 </div>
 
-<!-- PROMO 2 -->
-<label for="promo2" class="btn primary">See Photos</label>
-<input id="promo2" class="modal-toggle" type="checkbox">
-<div class="photo-modal">
-  <div class="photo-content">
-    <h3>5% Discount on FGC & KLFG Lands</h3>
-    <img src="assets/promo2-1.jpg" alt="Promo 2 photo 1">
-    <img src="assets/promo2-2.jpg" alt="Promo 2 photo 2">
-    <p>Get 50 blocks + 5 bags of cement. Ends 18/12/2025.</p>
-    <a class="whatsapp-btn" target="_blank" rel="noopener"
-       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">Message on WhatsApp</a>
-    <label for="promo2" class="close-modal">× Close</label>
+<!-- ===== PROMO 2 ===== -->
+    <div class="promo-box">
+      <h3>🎉 Limited Offer: 5% Discount on FGG Lands</h3>
+      <p>
+        Secure your property this week and get 500 Blocks and 50 Bags of Cement. Plus up to <strong>₦2m savings</strong> (Ends 18/12/2025).
+      </p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20the%205%%20discount%20Lekki%20Land%20offer.%20Please%20share%20details."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+    
+    <!-- ===== PROMO 3 ===== -->
+    <div class="promo-box">
+      <h3>🎉 Limited Offer: HGCE and KLG Lands</h3>
+      <p>
+        Buy 1 Plot and WIN <strong>₦100k Shopping Voucher</strong>.
+      </p>
+      <p>
+        Buy 2 Plots and WIN <strong>₦250k Shopping Voucher</strong>.
+      </p>
+        <p>
+        Buy 3 Plots and WIN <strong>₦400k Shopping Voucher</strong>.
+      </p>
+        <p>
+        Buy 6 Plots and WIN <strong>₦850k Shopping Voucher</strong>.
+      </p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20the%20Discount%20HGCE and KLG Lands%20offer.%20Please%20share%20details."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+<p style="text-align:center;opacity:0.7;font-size:13px;">
+KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> provides trusted insurance and real estate advisory across Nigeria.
+</p>
+    <!-- ===== PROMO 3 (example template) ===== -->
+    <!--
+    <div class="promo-box">
+      <h3>🔥 Holiday Promo</h3>
+      <p>Enjoy discounted service fees on all insurance advisory sessions booked before December 31st.</p>
+      <div class="promo-links">
+        <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'd%20like%20to%20know%20more%20about%20the%20Holiday%20Promo."
+           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
+      </div>
+    </div>
+    -->
   </div>
-</div>
+</section> 
 
-<!-- PROMO 3 -->
-<label for="promo3" class="btn primary">See Photos</label>
-<input id="promo3" class="modal-toggle" type="checkbox">
-<div class="photo-modal">
-  <div class="photo-content">
-    <h3>Buy & Win Vouchers (FGC, KLFG, TEV)</h3>
-    <img src="assets/promo3-1.jpg" alt="Promo 3 photo 1">
-    <img src="assets/promo3-2.jpg" alt="Promo 3 photo 2">
-    <p>1 plot: ₦100k voucher, 2 plots: ₦250k, 3 plots: ₦400k. Ends 18/12/2025.</p>
-    <a class="whatsapp-btn" target="_blank" rel="noopener"
-       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Vouchers%20Promo.">Message on WhatsApp</a>
-    <label for="promo3" class="close-modal">× Close</label>
-  </div>
-</div>
 
 <!-- Put this near the very top of <body> so Back to Top works -->
 <a id="top"></a>
