Revise promotions and add new images in index.html
Updated promotional content and images for various offers.

--- a/index.html
+++ b/index.html
@@ -419,12 +419,8 @@
 <div class="photo-modal">
   <div class="photo-content">
     <h3>🔥 HOT DISTRESS SALE: TEV 13 PLOTS FENCED with C of O (Eleko Lekki Expressway)</h3>
-
-    <img src="assets/promo1-1.jpg" alt="Promo 1 photo 1">
-    <img src="assets/promo1-2.jpg" alt="Promo 1 photo 2">
-
+    <img src="assets/TEV 2.jpg" alt="">
     <p>Buy and win a 7-day all-expense-paid trip to any country of your choice in Africa. Offer ends 18/12/2025.</p>
-
     <a class="whatsapp-btn" target="_blank" rel="noopener"
        href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20TEV%2013%20Plots%20Promo.">
        Message on WhatsApp
@@ -439,11 +435,20 @@
       <p>
         Secure your property this week and get 500 Blocks and 50 Bags of Cement. Plus up to <strong>₦2m savings</strong> (Ends 18/12/2025).
       </p>
-      <div class="promo-links">
-        <a href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20the%205%%20discount%20Lekki%20Land%20offer.%20Please%20share%20details."
-           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
-    </div>
+      <label for="promo2" class="cta-link">See Photos</label>
+<input id="promo2" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>🎁 Limited Offer: 5% Discount on FGG Lands</h3>
+    <img src="assets/FGG 2.jpg" alt="">
+    <p>Secure your property this week and get 50 blocks & 5 bags of cement. Plus up to ₦2m savings. Offer ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">
+       Message on WhatsApp
+    </a>
+    <label for="promo2" class="close-modal">× Close</label>
+  </div>
+</div>
     
     <!-- ===== PROMO 3 ===== -->
     <div class="promo-box">
@@ -460,11 +465,21 @@
         <p>
         Buy 6 Plots and WIN <strong>₦850k Shopping Voucher</strong>.
       </p>
-      <div class="promo-links">
-        <a href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20the%20Discount%20HGCE and KLG Lands%20offer.%20Please%20share%20details."
-           target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
-    </div>
+      <label for="promo3" class="cta-link">See Photos</label>
+<input id="promo3" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>💰 Buy & Win Vouchers (FGC, KLFG & TEV Estates)</h3>
+    <img src="assets/HGCE 2.jpg" alt="">
+    <img src="assets/KLG 2.jpg" alt="">
+    <p>Buy 1 plot and win ₦100k shopping voucher, 2 plots ₦250k, 3 plots ₦400k! Ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Promo.">
+       Message on WhatsApp
+    </a>
+    <label for="promo3" class="close-modal">× Close</label>
+  </div>
+</div>
 <p style="text-align:center;opacity:0.7;font-size:13px;">
 KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> provides trusted insurance and real estate advisory across Nigeria.
 </p>
