--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       </div>
     </div>
   </section>
-
+  
 <!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
 <section class="section" id="promos">
   <div class="container">
@@ -465,13 +465,13 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="promo-links">
         <a href="https://wa.me/2349162631206?text=Hello%20KARBA!%20I'd%20like%20to%20know%20more%20about%20the%20Holiday%20Promo."
            target="_blank" rel="noopener">💬 Message on WhatsApp</a>
-      </div>
+          </div>
     </div>
     -->
-  </div>
- </div>
-    <section> 
-
+         </div>
+        </div>
+      </div>
+    </section> 
 
 <!-- Put this near the very top of <body> so Back to Top works -->
 <a id="top"></a>
