--- a/index.html
+++ b/index.html
@@ -286,6 +286,27 @@
 }
 .close-modal{ margin-left:10px; cursor:pointer; color:#666 }
 </style>
+<style>
+.pill{
+  display:inline-block; padding:8px 14px; border:1px solid rgba(255,255,255,.4);
+  border-radius:10px; background:rgba(255,204,64,.12);
+  color:#ffcc40; text-decoration:none; cursor:pointer
+}
+.modal-toggle{ display:none }
+.photo-modal{ position:fixed; inset:0; display:none; align-items:center; justify-content:center;
+  background:rgba(0,0,0,.7); z-index:9999; padding:16px }
+.modal-toggle:checked + .photo-modal{ display:flex }
+.photo-content{ background:#fff; color:#111; max-width:520px; width:100%;
+  border-radius:12px; padding:16px; box-shadow:0 10px 30px rgba(0,0,0,.3) }
+.photo-content h3{ margin:0 0 10px }
+.photo-content ul{ padding-left:20px; margin:10px 0 }
+.photo-content ul li{ margin-bottom:6px }
+.whatsapp-btn{
+  display:inline-block; margin-top:10px; padding:8px 12px; border-radius:8px;
+  background:#25D366; color:#fff; text-decoration:none
+}
+.close-modal{ margin-left:10px; cursor:pointer; color:#666 }
+</style>
 </head>      
 <body>
 <header class="header">
@@ -358,7 +379,29 @@
             <li>Motor & General (via partner insurers)</li>
           </ul>
           <div class="cta" style="display:flex; gap:12px; flex-wrap:wrap;">
-          <a class="btn" href="#quote">Request Official Quote</a>
+          <label for="insurance-quote" class="pill">Request Official Quote</label>
+
+<!-- Modal trigger -->
+<input id="insurance-quote" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>Request an Official Insurance Quote</h3>
+    <p>To help us prepare your accurate quote, please provide:</p>
+    <ul>
+      <li>✅ Your full name</li>
+      <li>✅ Date of birth</li>
+      <li>✅ Type of insurance plan (Life, Education, Motor, etc.)</li>
+      <li>✅ Preferred insurer (optional)</li>
+    </ul>
+
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27d%20like%20to%20request%20an%20official%20insurance%20quote.%20Here%20are%20my%20details:%0A-Name:%20%0A-Date%20of%20Birth:%20%0A-Plan%20Type:%20%0A-Preferred%20Insurer:%20(optional)">
+       Message on WhatsApp
+    </a>
+
+    <label for="insurance-quote" class="close-modal">× Close</label>
+  </div>
+</div>
           <a class="btn primary" href="#ins-plans">See Plan Types</a>
         </div>
           <p style="font-size:12px;color:var(--muted);margin-top:8px">*Calculators differ by company. KARBA fetches accurate quotes directly from your chosen insurer.</p>
