--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div class="grid grid-2">
           <div class="card stat"><div class="lbl">Clients</div><div class="val">200+</div></div>
           <div class="card stat"><div class="lbl">Partners</div><div class="val">10+</div></div>
-          <div class="card stat"><div class="lbl">Plans</div><div class="val">Life-Insurance & Real Estate</div></div>
+          <div class="card stat"><div class="lbl">Plans</div><div class="val">Real Estate & Insurance</div></div>
           <div class="card stat">
   <div class="lbl">Support</div>
   <div class="val" style="display: flex; gap: 10px; justify-content: center; align-items: center;">
@@ -391,7 +391,8 @@
       <li>✅ Your full name</li>
       <li>✅ Date of birth</li>
       <li>✅ Type of insurance plan (Life, Education, Motor, etc.)</li>
-      <li>✅ Preferred insurer (optional)</li>
+      <li>✅ Email</li>
+      <li>✅ Preferred insurer (CUSTODIAN)</li>
     </ul>
 
     <a class="whatsapp-btn" target="_blank" rel="noopener"
@@ -449,8 +450,6 @@
     </div>
   </section>
 
-  
-  
 <!-- ===== PROMOS & SPECIAL ANNOUNCEMENTS ===== -->
 <section class="section" id="promos">
   <div class="container">
@@ -463,7 +462,7 @@
       <p>
         Buy and Win 7days all expenses paid trip to any Country of your choice in Africa. <strong>Ends 18/12/2025</strong>.
       </p>
-      <label for="promo1" class="cta-link">See Photos</label>
+      <label for="promo1" class="cta-link">View Offer</label>
 <input id="promo1" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
@@ -485,7 +484,7 @@
       <p>
         Secure your property this week and get 500 Blocks and 50 Bags of Cement. Plus up to <strong>₦2m savings</strong> (Ends 18/12/2025).
       </p>
-      <label for="promo2" class="cta-link">See Photos</label>
+      <label for="promo2" class="cta-link">View Offer</label>
 <input id="promo2" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
@@ -516,11 +515,11 @@
         <p>
         Buy 6 Plots and WIN <strong>₦850k Shopping Voucher</strong>.
       </p>
-      <label for="promo3" class="cta-link">See Photos</label>
+      <label for="promo3" class="cta-link">View Offer</label>
 <input id="promo3" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
-    <h3>💰 Buy & Win Vouchers (FGC, KLFG & TEV Estates)</h3>
+    <h3>💰 Buy & Win Vouchers (KLG & HGCE Estates)</h3>
     <img src="assets/HGCE 2.jpg" alt="">
     <img src="assets/KLG 2.jpg" alt="">
     <p>Buy 1 plot and win ₦100k shopping voucher, 2 plots ₦250k, 3 plots ₦400k! Ends 18/12/2025.</p>
@@ -570,7 +569,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">Realty PIN</div>
       <div class="meta-line">
         <span>From ₦1.5m</span>
-        <label for="inv-lag-1" class="btn-inline">See Photos</label>
+        <label for="inv-lag-1" class="btn-inline">View Details</label>
         <span class="muted">• Yield: 30% p.a.</span>
       </div>
       <input id="inv-lag-1" class="modal-toggle" type="checkbox">
@@ -589,7 +588,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">Women Of Vision</div>
       <div class="meta-line">
         <span>From ₦2million</span>
-        <label for="inv-lag-2" class="btn-inline">See Photos</label>
+        <label for="inv-lag-2" class="btn-inline">View Details</label>
         <span class="muted">• Yield: 30% - 40% p.a.</span>
       </div>
       <input id="inv-lag-2" class="modal-toggle" type="checkbox">
@@ -613,7 +612,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">KA 'Twin Court' 3-Bed Penthouse, Abijo,Lekki-expressway</div>
       <div class="meta-line">
         <span>₦95m</span>
-        <label for="lag-sale-1" class="btn-inline">See Photos</label>
+        <label for="lag-sale-1" class="btn-inline">View Details</label>
         <span class="muted">• Title: Governor’s Consent</span>
       </div>
       <input id="lag-sale-1" class="modal-toggle" type="checkbox">
@@ -632,7 +631,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">KA 'Twin Court' 2-Bed Apartments, Abijo,Lekki-expressway</div>
       <div class="meta-line">
         <span>₦70m</span>
-        <label for="lag-sale-2" class="btn-inline">See Photos</label>
+        <label for="lag-sale-2" class="btn-inline">View Details</label>
         <span class="muted">• Title: Governor's Consent</span>
       </div>
       <input id="lag-sale-2" class="modal-toggle" type="checkbox">
@@ -657,7 +656,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">1. PE2: 600sqm, Olomowewe town,Ibeju-Lekki</div>
       <div class="meta-line">
         <span>₦16m</span>
-        <label for="lag-land-1" class="btn-inline">See Photos</label>
+        <label for="lag-land-1" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O</span>
       </div>
       <input id="lag-land-1" class="modal-toggle" type="checkbox">
@@ -676,7 +675,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">2. TEV: 13 Plots Fenced Land, Eleko, Lekki-Epe Expressway</div>
       <div class="meta-line">
         <span>₦750m</span>
-        <label for="lag-land-2" class="btn-inline">See Photos</label>
+        <label for="lag-land-2" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O</span>
       </div>
       <input id="lag-land-2" class="modal-toggle" type="checkbox">
@@ -695,7 +694,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">3. FGG: 600sqm, Abijo,Lekki-expressway</div>
       <div class="meta-line">
         <span>">₦40m</span>
-        <label for="lag-land-3" class="btn-inline">See Photos</label>
+        <label for="lag-land-3" class="btn-inline">View Details</label>
         <span class="muted">• Title: Governor’s Consent</span>
       </div>
       <input id="lag-land-3" class="modal-toggle" type="checkbox">
@@ -714,7 +713,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">4. KRE: 600sqm, Otolu,Ibeju-Lekki</div>
       <div class="meta-line">
         <span>₦18m</span>
-        <label for="lag-land-4" class="btn-inline">See Photos</label>
+        <label for="lag-land-4" class="btn-inline">View Details</label>
         <span class="muted">• Title: Govt.Approved Excision</span>
       </div>
       <input id="lag-land-4" class="modal-toggle" type="checkbox">
@@ -733,7 +732,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">5. HGC: 600sqm, Elerangbe,Ibeju-Lekki</div>
       <div class="meta-line">
         <span>">₦5m</span>
-        <label for="lag-land-5" class="btn-inline">See Photos</label>
+        <label for="lag-land-5" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="lag-land-5" class="modal-toggle" type="checkbox">
@@ -752,7 +751,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">6. KLG: 600sqm, Igbodu,Epe</div>
       <div class="meta-line">
         <span>">₦12m</span>
-        <label for="lag-land-3" class="btn-inline">See Photos</label>
+        <label for="lag-land-3" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="lag-land-6" class="modal-toggle" type="checkbox">
@@ -771,7 +770,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">7. HGCE: 600sqm, Elerangbe,Ibeju-Lekki</div>
       <div class="meta-line">
         <span>3.5m</span>
-        <label for="lag-land-7" class="btn-inline">See Photos</label>
+        <label for="lag-land-7" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="lag-land-7" class="modal-toggle" type="checkbox">
@@ -790,7 +789,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">8. KHC: 600sqm, Igbogun,Ibeju-Lekki</div>
       <div class="meta-line">
         <span>₦7m</span>
-        <label for="lag-land-8" class="btn-inline">See Photos</label>
+        <label for="lag-land-8" class="btn-inline">View Details</label>
         <span class="muted">• Title: Registered Survey & Deed</span>
       </div>
       <input id="lag-land-8" class="modal-toggle" type="checkbox">
@@ -815,7 +814,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">1. AVE: 465sqm, Fimie-Ama Phaiga,River State</div>
       <div class="meta-line">
         <span>₦22m</span>
-        <label for="riv-land-1" class="btn-inline">See Photos</label>
+        <label for="riv-land-1" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O</span>
       </div>
       <input id="riv-land-1" class="modal-toggle" type="checkbox">
@@ -833,7 +832,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">2. OGC: 450sqm Land, Elele Etche LGA,River State</div>
       <div class="meta-line">
         <span>₦4.5m</span>
-        <label for="riv-land-2" class="btn-inline">See Photos</label>
+        <label for="riv-land-2" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O in view</span>
       </div>
       <input id="riv-land-2" class="modal-toggle" type="checkbox">
@@ -858,7 +857,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">1. CRG: 450sqm, Ngor Okpala, Owerri LGA, Imo State</div>
       <div class="meta-line">
         <span>₦7m</span>
-        <label for="imo-land-1" class="btn-inline">See Photos</label>
+        <label for="imo-land-1" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="imo-land-1" class="modal-toggle" type="checkbox">
@@ -876,7 +875,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">2. FVE: 450sqm Land, Ohuba, Owerri LGA, Imo State</div>
       <div class="meta-line">
         <span>₦3.5m</span>
-        <label for="imo-land-2" class="btn-inline">See Photos</label>
+        <label for="imo-land-2" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="imo-land-2" class="modal-toggle" type="checkbox">
@@ -901,7 +900,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">1. SGE: 500sqm, Nando LGA, Anambra State</div>
       <div class="meta-line">
         <span>₦7m</span>
-        <label for="ana-land-1" class="btn-inline">See Photos</label>
+        <label for="ana-land-1" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O</span>
       </div>
       <input id="ana-land-1" class="modal-toggle" type="checkbox">
@@ -919,7 +918,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">2. ORG: 450sqm Land, Mgbakkwu, Awka LGA, Anambra</div>
       <div class="meta-line">
         <span>₦4m</span>
-        <label for="ana-land-2" class="btn-inline">See Photos</label>
+        <label for="ana-land-2" class="btn-inline">View Details</label>
         <span class="muted">• Title: Survey & Deed</span>
       </div>
       <input id="ana-land-2" class="modal-toggle" type="checkbox">
@@ -937,7 +936,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       <div class="prop-title">3. DBGCE: 450sqm Land, Isiagu, Awka LGA, Anambra</div>
       <div class="meta-line">
         <span>₦20m</span>
-        <label for="ana-land-3" class="btn-inline">See Photos</label>
+        <label for="ana-land-3" class="btn-inline">View Details</label>
         <span class="muted">• Title: C of O</span>
       </div>
       <input id="ana-land-3" class="modal-toggle" type="checkbox">
@@ -1027,7 +1026,7 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
   <section id="ins-plans" class="info-container">
     <div class="info-heading">
       <h3 class="info-title">Insurance Plan</h3>
-      <p class="info-sub">Quick overview of popular plans. Tap “See Photos” to view and chat on WhatsApp.</p>
+      <p class="info-sub">Quick overview of popular plans. Tap “Learn More” to view and chat on WhatsApp.</p>
     </div>
 
     <div class="info-grid">
@@ -1039,14 +1038,13 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Insulated from market swings</li>
         <li>Financial Independence & Peace of Mind</li>
       </ul>
-      <label for="ins-annuity" class="btn-inline">See Photos</label>
+      <label for="ins-annuity" class="btn-inline">Learn More</label>
 
       <!-- modal -->
       <input id="ins-annuity" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Retirees & Immediate Annuity</h3>
-        <img src="assets/annuity 1.jpg" alt="Annuity 1">
-        <img src="assets/annuity 2.jpg" alt="Annuity 2">
+        <img src="assets/A 1.jpg" alt="">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Retirees%20%26%20Immediate%20Annuity.%20Please%20advise.">Message on WhatsApp</a>
         <label for="ins-annuity" class="close-modal">× Close</label>
@@ -1062,13 +1060,12 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Flexible premiums + optional riders</li>
         <li>Peace of mind for breadwinners & SMEs</li>
       </ul>
-      <label for="ins-family" class="btn-inline">See Photos</label>
+      <label for="ins-family" class="btn-inline">Learn More</label>
 
       <input id="ins-family" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Family Protection Plans</h3>
-        <img src="assets/family 1.jpg" alt="family 1">
-        <img src="assets/family 2.jpg" alt="family 2">
+        <img src="assets/F 1.jpg" alt="">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Family%20Protection%20Plans.">Message on WhatsApp</a>
         <label for="ins-family" class="close-modal">× Close</label>
@@ -1084,13 +1081,12 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Serves as both protection & savings</li>
         <li>The child education continue if sponsor passes away</li>
       </ul>
-      <label for="ins-edu" class="btn-inline">See Photos</label>
+      <label for="ins-edu" class="btn-inline">Learn More</label>
 
       <input id="ins-edu" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Children Education Protection</h3>
-        <img src="assets/edu 1.jpg" alt="Education plan 1">
-        <img src="assets/edu 2.jpg" alt="Education plan 2">
+        <img src="assets/E 1.jpg" alt="Education plan 1">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Children%20Education%20Protection%20plans.">Message on WhatsApp</a>
         <label for="ins-edu" class="close-modal">× Close</label>
@@ -1105,13 +1101,12 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Access policy loans when needed</li>
         <li>Build generational wealth & legacy.</li>
       </ul>
-      <label for="ins-whole" class="btn-inline">See Photos</label>
+      <label for="ins-whole" class="btn-inline">Learn More</label>
 
       <input id="ins-whole" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Whole-Life Plan</h3>
-        <img src="assets/whole 1.jpg" alt="Whole life plan 1">
-        <img src="assets/whole 2.jpg" alt="Whole life plan 2">
+        <img src="assets/W 1.jpg" alt="">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Whole-Life%20Plan%20options.">Message on WhatsApp</a>
         <label for="ins-whole" class="close-modal">× Close</label>
@@ -1126,13 +1121,12 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Convertible to whole-life later</li>
         <li>Great for income earner</li>
       </ul>
-      <label for="ins-term" class="btn-inline">See Photos</label>
+      <label for="ins-term" class="btn-inline">Learn More</label>
 
       <input id="ins-term" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Term Assurance</h3>
-        <img src="assets/term 1.jpg" alt="Term assurance 1">
-        <img src="assets/term 2.jpg" alt="Term assurance 2">
+        <img src="assets/T 1.jpg" alt="">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Term%20Assurance.">Message on WhatsApp</a>
         <label for="ins-term" class="close-modal">× Close</label>
@@ -1147,13 +1141,12 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
         <li>Instant verification & easy claims support</li>
         <li>Drive confidently, stayfully protected</li>
       </ul>
-      <label for="ins-motor" class="btn-inline">See Photos</label>
+      <label for="ins-motor" class="btn-inline">Learn More</label>
 
       <input id="ins-motor" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>Motor Vehicle Insurance</h3>
-        <img src="assets/motor 1.jpg" alt="Motor insurance 1">
-        <img src="assets/motor 2.jpg" alt="Motor insurance 2">
+        <img src="assets/M 1.jpg" alt="">
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20Motor%20Vehicle%20Insurance%20(Comprehensive%20or%20Third-Party).">Message on WhatsApp</a>
         <label for="ins-motor" class="close-modal">× Close</label>
