Add new property card for FE: 450sqm land

--- a/index.html
+++ b/index.html
@@ -828,21 +828,39 @@ KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> prov
       </div></div>
     </div>
 
-    <div class="prop-card sm">
-      <div class="prop-title">2. OGC: 450sqm Land, Elele Etche LGA,River State</div>
+<div class="prop-card sm">
+      <div class="prop-title">2. FE: 450sqm, Redeem Camp Road, PH, Rivers State</div>
       <div class="meta-line">
-        <span>₦4.5m</span>
+        <span>₦15m</span>
         <label for="riv-land-2" class="btn-inline">View Details</label>
-        <span class="muted">• Title: C of O in view</span>
+        <span class="muted">• Title: C of O</span>
       </div>
       <input id="riv-land-2" class="modal-toggle" type="checkbox">
+      <div class="photo-modal"><div class="photo-content">
+        <h3>FE: 450sqm, Redeem Camp Road, PH, Rivers State</h3>
+        <img src="assets/FE 1.jpg" alt="">
+        <p>₦15m • Title: C of O</p>
+        <a class="whatsapp-btn" target="_blank" rel="noopener"
+           href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20FE: 450sqm%20Land%20in%20Redeem Camp Road, PH, Rivers State%20(₦15m).">💬 Message on WhatsApp</a>
+        <label for="riv-land-2" class="close-modal">× Close</label>
+      </div></div>
+    </div>
+    
+    <div class="prop-card sm">
+      <div class="prop-title">3. OGC: 450sqm Land, Elele Etche LGA, River State</div>
+      <div class="meta-line">
+        <span>₦4.5m</span>
+        <label for="riv-land-3" class="btn-inline">View Details</label>
+        <span class="muted">• Title: C of O in view</span>
+      </div>
+      <input id="riv-land-3" class="modal-toggle" type="checkbox">
       <div class="photo-modal"><div class="photo-content">
         <h3>OGC: 450sqm Land, Elele Etche LGA,River State</h3>
         <img src="assets/OGC 1.jpg" alt="">
         <p>₦4.5m • C of O in view</p>
         <a class="whatsapp-btn" target="_blank" rel="noopener"
            href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I'm%20interested%20in%20OGC: 450sqm%20Plot%20in%20Elele Etche LGA,River State%20(₦12m).">💬 Message on WhatsApp</a>
-        <label for="riv-land-2" class="close-modal">× Close</label>
+        <label for="riv-land-3" class="close-modal">× Close</label>
       </div></div>
     </div>
     <!-- Duplicate more cards up to 10+ -->
