Add promotional offers for SE, OGC, and ORG Lands

--- a/index.html
+++ b/index.html
@@ -499,6 +499,30 @@
         </div>
       </div>
     </div>
+
+    <!-- ===== PROMO 3 ===== -->
+    <div class="promo-box">
+      <h3>🎉 Limited Offer: 20% Discount on SE, OGC & ORG Lands</h3>
+      <p>
+        Secure your property this week and Gain up to <strong>₦2m savings</strong> (Ends 18/12/2025).
+      </p>
+      <label for="promo2" class="cta-link">View Offer</label>
+<input id="promo2" class="modal-toggle" type="checkbox">
+<div class="photo-modal">
+  <div class="photo-content">
+    <h3>🎁 Limited Offer: 5% Discount on FGG Lands</h3>
+    <img src="assets/SE 2.jpg" alt="">
+    <img src="assets/OGC 2.jpg" alt="">
+    <img src="assets/ORG 2.jpg" alt="">
+    <p>Secure your property this week and get 50 blocks & 5 bags of cement. Plus up to ₦2m savings. Offer ends 18/12/2025.</p>
+    <a class="whatsapp-btn" target="_blank" rel="noopener"
+       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">
+       Message on WhatsApp
+    </a>
+    <label for="promo2" class="close-modal">× Close</label>
+        </div>
+      </div>
+    </div>
     
     <!-- ===== PROMO 3 ===== -->
     <div class="promo-box">
