--- a/index.html
+++ b/index.html
@@ -506,11 +506,11 @@
       <p>
         Secure your property this week and Gain up to <strong>₦2m savings</strong> (Ends 18/12/2025).
       </p>
-      <label for="promo2" class="cta-link">View Offer</label>
-<input id="promo2" class="modal-toggle" type="checkbox">
+      <label for="promo3" class="cta-link">View Offer</label>
+<input id="promo3" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
-    <h3>🎁 Limited Offer: 5% Discount on FGG Lands</h3>
+    <h3>🎁 Limited Offer: 20% Discount on SE, OGC & ORG Lands</h3>
     <img src="assets/SE 2.jpg" alt="">
     <img src="assets/OGC 2.jpg" alt="">
     <img src="assets/ORG 2.jpg" alt="">
@@ -519,12 +519,12 @@
        href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%205%%20Discount%20Promo.">
        Message on WhatsApp
     </a>
-    <label for="promo2" class="close-modal">× Close</label>
+    <label for="promo3" class="close-modal">× Close</label>
         </div>
       </div>
     </div>
     
-    <!-- ===== PROMO 3 ===== -->
+    <!-- ===== PROMO 4 ===== -->
     <div class="promo-box">
       <h3>🎉 Limited Offer: HGCE and KLG Lands</h3>
       <p>
@@ -539,8 +539,8 @@
         <p>
         Buy 6 Plots and WIN <strong>₦850k Shopping Voucher</strong>.
       </p>
-      <label for="promo3" class="cta-link">View Offer</label>
-<input id="promo3" class="modal-toggle" type="checkbox">
+      <label for="promo4" class="cta-link">View Offer</label>
+<input id="promo" class="modal-toggle" type="checkbox">
 <div class="photo-modal">
   <div class="photo-content">
     <h3>💰 Buy & Win Vouchers (KLG & HGCE Estates)</h3>
@@ -551,7 +551,7 @@
        href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Promo.">
        Message on WhatsApp
     </a>
-    <label for="promo3" class="close-modal">× Close</label>
+    <label for="promo4" class="close-modal">× Close</label>
     </div>
   </div>
 </div>
