Update promotional images in index.html

--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 <div class="photo-modal">
   <div class="photo-content">
     <h3>🎁 Limited Offer: 20% Discount on SE, OGC & ORG Lands</h3>
-    <img src="assets/SE 2.jpg" alt="">
+    <img src="assets/SGE 2.jpg" alt="">
     <img src="assets/OGC 2.jpg" alt="">
     <img src="assets/ORG 2.jpg" alt="">
     <p>Secure your property this week and get 50 blocks & 5 bags of cement. Plus up to ₦2m savings. Offer ends 18/12/2025.</p>
@@ -544,7 +544,7 @@
 <div class="photo-modal">
   <div class="photo-content">
     <h3>💰 Buy & Win Vouchers (KLG & HGCE Estates)</h3>
-    <img src="assets/HGCE 2.jpg" alt="">
+    <img src="assets/HCGE 2.jpg" alt="">
     <img src="assets/KLG 2.jpg" alt="">
     <p>Buy 1 plot and win ₦100k shopping voucher, 2 plots ₦250k, 3 plots ₦400k! Ends 18/12/2025.</p>
     <a class="whatsapp-btn" target="_blank" rel="noopener"
