Add promo section for HGCE and KLG Lands
Added a promotional section for HGCE and KLG Lands with details about offers and a WhatsApp contact link.

--- a/index.html
+++ b/index.html
@@ -577,10 +577,43 @@
     </div>
   </div>
 </div>
-    
+
+    <!-- PROMO: RHC LAND -->
+<div class="promo-box">
+  <h3><span class="badge">🎉</span> 🎉 Limited Offer: HGCE and KLG Lands</h3>
+  <p>Buy 1 Plot and WIN ₦100k Shopping Voucher.</p>
+  <p>Buy 2 Plots and WIN ₦250k Shopping Voucher.</p>
+  <p>Buy 3 Plots and WIN ₦400k Shopping Voucher.</p>
+  <p>Buy 6 Plots and WIN ₦850k Shopping Voucher.</p>
+
+  <!-- 1) unique id -->
+  <input id="promo-rhg" class="modal-toggle" type="checkbox">
+
+  <!-- 2) label's for matches id exactly -->
+  <label for="promo-rhg" class="cta-link">View Offer</label>
+
+  <!-- 3) modal is a sibling that comes AFTER the input -->
+  <div class="photo-modal">
+    <div class="photo-content">
+      <h4>HGCE and KLG Lands</h4>
+      <img src="/assets/KLG 2.jpg" alt="">
+      <img src="/assets/HGCE 2.jpg" alt="">
+      <p>Promo ends 18/12/2025.</p>
+
+      <!-- close without JS -->
+      <label for="promo-rhg" class="close-modal">× Close</label>
+
+      <!-- optional WhatsApp CTA -->
+      <a class="btn whatsapp" target="_blank"
+         href="https://wa.me/2349162631205?text=Hello%20KARBA%2C%20I%E2%80%99m%20interested%20in%20the%20RHG%20Land%20promo.%20Please%20share%20details.">
+         Message on WhatsApp
+      </a>
+    </div>
+  </div>
+</div>
     <!-- ===== PROMO 6 ===== -->
     <div class="promo-box">
-      <h3>🎉 Limited Offer: HGCE and KLG Lands</h3>
+      <h3></h3>
       <p>
         Buy 1 Plot and WIN <strong>₦100k Shopping Voucher</strong>.
       </p>
