Update promo section in index.html

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
   </div>
 </div>
 
-    <!-- PROMO: RHC LAND -->
+    <!-- PROMO: HGCE and KLG LANDS -->
 <div class="promo-box">
   <h3><span class="badge">🎉</span> 🎉 Limited Offer: HGCE and KLG Lands</h3>
   <p>Buy 1 Plot and WIN ₦100k Shopping Voucher.</p>
@@ -611,37 +611,6 @@
     </div>
   </div>
 </div>
-    <!-- ===== PROMO 6 ===== -->
-    <div class="promo-box">
-      <h3></h3>
-      <p>
-        Buy 1 Plot and WIN <strong>₦100k Shopping Voucher</strong>.
-      </p>
-      <p>
-        Buy 2 Plots and WIN <strong>₦250k Shopping Voucher</strong>.
-      </p>
-        <p>
-        Buy 3 Plots and WIN <strong>₦400k Shopping Voucher</strong>.
-      </p>
-        <p>
-        Buy 6 Plots and WIN <strong>₦850k Shopping Voucher</strong>.
-      </p>
-      <label for="promo6" class="cta-link">View Offer</label>
-<input id="promo" class="modal-toggle" type="checkbox">
-<div class="photo-modal">
-  <div class="photo-content">
-    <h3>💰 Buy & Win Vouchers (KLG & HGCE Estates)</h3>
-    <img src="assets/HCGE 2.jpg" alt="">
-    <img src="assets/KLG 2.jpg" alt="">
-    <p>Buy 1 plot and win ₦100k shopping voucher, 2 plots ₦250k, 3 plots ₦400k! Ends 18/12/2025.</p>
-    <a class="whatsapp-btn" target="_blank" rel="noopener"
-       href="https://wa.me/2349162631205?text=Hello%20KARBA!%20I%27m%20interested%20in%20the%20Buy%20%26%20Win%20Promo.">
-       Message on WhatsApp
-    </a>
-    <label for="promo4" class="close-modal">× Close</label>
-        </div>
-      </div>
-    </div>
     
 <p style="text-align:center;opacity:0.7;font-size:13px;">
 KARBA Financial Consultant Ltd; also known simply as <strong>KARBA</strong> provides trusted insurance and real estate advisory across Nigeria.
