Update land title in photo modal

--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
   <!-- 3) modal is a sibling that comes AFTER the input -->
   <div class="photo-modal">
     <div class="photo-content">
-      <h4>RHG LAND — Ibeju-Lekki</h4>
+      <h4>RHC LAND — Ibeju-Lekki</h4>
       <img src="/assets/RHC 2.jpg" alt="">
       <p>Promo ends 18/12/2025.</p>
 
