Enhance SEO and social media metadata
Added meta tags for SEO and social sharing.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />      
 <meta name="description" content="Trusted advisory for insurance and real estate. Verified listings, direct with developers and owners. Fast WhatsApp support.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<meta name="robots" content="index, follow">
+<meta name="keywords" content="KARBA, life insurance Nigeria, annuity plans, family protection, education plan, real estate agent Lagos, land for sale Lagos, land banking Nigeria">
+  
 <!-- ✅ Open Graph for social + search -->
-<meta property="og:title" content="KARBA Financial Consultant Ltd — Real Estate & Insurance in Nigeria">
-<meta property="og:description" content="Trusted insurance and real estate firm in Nigeria. Verified listings, smart investments, and advisory — KARBA.">
+<meta property="og:type" content="website">
+<meta property="og:title" content="KARBA Financial Consultant Ltd — Real Estate & Insurance Advisory in Nigeria">
+<meta property="og:description" content="Verified real estate offers and insurance plans. View properties, promos and insurance plan types, Verified listings, smart investments, and advisory — KARBA, then chat on WhatsApp for tailored advice.">
 <meta property="og:url" content="https://karbafinancialconsultant.com/">
 <meta property="og:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
 <meta name="twitter:card" content="summary_large_image">
@@ -22,6 +25,12 @@
 <meta name="twitter:description" content="Search 'KARBA' for trusted insurance & real estate solutions in Nigeria.">
 <meta name="twitter:image" content="https://karbafinancialconsultant.com/assets/karba-logo-gold.png">
 
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="KARBA – Insurance & Real Estate Advisory in Nigeria">
+<meta name="twitter:description" content="Trusted life insurance, annuity, family protection & verified real estate offers across Nigeria.">
+<meta name="twitter:image" content="https://www.karbafinancialconsultant.com/assets/karba-logo-gold.png">
+  
 <!-- Social profiles for search -->
 <script type="application/ld+json">
 
@@ -29,15 +38,69 @@
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "KARBA Financial Consultant Ltd",
+  "alternateName": "KARBA",
   "url": "https://karbafinancialconsultant.com/",
   "logo": "https://karbafinancialconsultant.com/assets/karba-logo-gold.png",
+  "description": "KARBA Financial Consultant Ltd provides trusted, verified Insurance Advisory and Real Estate Intermediary services across Nigeria. Licensed under CAC and compliant with SCUML, NAICOM regulations and LASRERA for real estate operations.",
+  "foundingDate": "2023",
   "sameAs": [
     "https://facebook.com/profile.php?id=61579013108278/",
     "https://www.instagram.com/karba_f.c?igsh=cGxxaWhnMGJvZ3p1/",
     "https://youtube.com/@KarbaFinancialConsultant",
     "https://www.tiktok.com/@karba_fc",
     "https://www.linkedin.com/in/babatunde-bamigbetan-14a4b6142/"
-  ]
+  ],
+  "contactPoint": [{
+    "@type": "ContactPoint",
+    "telephone": "+2349162631205",
+    "contactType": "customer service",
+    "areaServed": "NG",
+    "availableLanguage": ["en"]
+  }]
+}
+</script>
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "KARBA Financial Consultant Ltd",
+  "url": "https://www.karbafinancialconsultant.com/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://www.google.com/search?q=site:karbafinancialconsultant.com+{search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+  
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "name": "Insurance Advisory",
+  "provider": {
+    "@type": "Organization",
+    "name": "KARBA Financial Consultant Ltd"
+  },
+  "areaServed": "NG",
+  "serviceType": "Life insurance, annuity, family protection, education plans",
+  "description": "Independent advisory on life insurance, annuity plans, family protection and education protection from multiple partner insurers."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Service",
+  "name": "Real Estate Intermediary",
+  "provider": {
+    "@type": "Organization",
+    "name": "KARBA Financial Consultant Ltd"
+  },
+  "areaServed": "NG",
+  "serviceType": "Property sales, land banking and rentals",
+  "description": "Connecting buyers to verified land, houses, apartments and land banking investments across Lagos and other Nigerian states."
 }
 </script>
 
